--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -22,7 +22,7 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm install --pure-lockfile
-        npx lerna bootstrap --ci
+        npx lerna bootstrap --no-ci
       env:
         CI: true
     - name: workaround for detached HEAD
