--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -39,6 +39,7 @@ jobs:
         npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
           "npx http-server storybook-static --port 6006 --silent" \
           "npx wait-on tcp:6006 && yarn test-storybook"
+      working-directory: packages/storybook-html/
     - name: create the current snapshot
       run: |
         npm run update-screenshots
