--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -13,7 +13,7 @@
 	"license": "ISC",
 	"scripts": {
 		"storybook": "start-storybook -p 6006",
-		"build-storybook": "build-storybook -o .out",
+		"build-storybook": "build-storybook",
 		"test-storybook": "test-storybook"
 	},
 	"devDependencies": {
