--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -38,7 +38,7 @@ jobs:
       run: |
         npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
           "npx http-server storybook-static --port 6006 --silent" \
-          "npx wait-on tcp:6006 && npm run test-storybook"
+#          "npx wait-on tcp:6006 && npm run test-storybook"
       working-directory: packages/storybook-html/
     - name: create the current snapshot
       run: |
