--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -14,6 +14,7 @@
 	"scripts": {
 		"storybook": "start-storybook -p 6006",
 		"build-storybook": "build-storybook",
+		"update-screenshots": "node scripts/screenshot.js",
 		"test-storybook": "test-storybook"
 	},
 	"devDependencies": {
