--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -40,6 +40,8 @@ jobs:
           "npx http-server storybook-static --port 6006 --silent" \
 #          "npx wait-on tcp:6006 && npm run test-storybook"
       working-directory: packages/storybook-html/
+      run: |
+        npx wait-on tcp:6006 && npm run test-storybook
     - name: create the current snapshot
       run: |
         npx wait-on tcp:6006 && npm run test-storybook
