--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -44,7 +44,7 @@ jobs:
         npm run test-storybook
     - name: create the current snapshot
       run: |
-        npx wait-on tcp:6006 && npm run test-storybook
+        npm run test-storybook
     - name: run visual regression
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
