--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -36,7 +36,9 @@ jobs:
       working-directory: packages/storybook-html/
     - name: Serve Storybook and run tests
       run: |
-        "concurrently -k -s first -n \"SB,TEST\" -c \"magenta,blue\" \"yarnnpm run build-storybook --quiet && npx http-server storybook-static --port 6006 --silent\" \"wait-on tcp:6006 && npm run test-storybook --maxWorkers=2\""
+        npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
+        "npx http-server storybook-static --port 6006 --silent" \
+        "npx wait-on tcp:6006 && npm run test-storybook --maxWorkers=2"
       working-directory: packages/storybook-html/
       run: |
         npm run test-storybook
