--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -39,6 +39,8 @@ jobs:
         npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
         "npx http-server storybook-static --port 6006 --silent" \
         "npx wait-on tcp:6006 && npm run test-storybook"
+        "cd packages/storybook-html/"
+        "npm run update-screenshots"
       working-directory: packages/storybook-html/
     - name: create the current snapshot
       run: |
