--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -14,7 +14,8 @@
 	"scripts": {
 		"storybook": "start-storybook -p 6006",
 		"build-storybook": "build-storybook",
-		"test-storybook": "test-storybook"
+		"test-storybook": "test-storybook",
+		"update-screenshots": "node scripts/screenshot.js"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.17.0",
