--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -61,6 +61,7 @@
 		"font-awesome": "^4.7.0",
 		"joi-browser": "^13.4.0",
 		"mermaid": "^8.13.10",
+		"puppeteer": "^17.1.3",
 		"sass": "^1.49.7",
 		"sass-loader": "^8.0.2",
 		"tocbot": "^4.18.0",
