--- a/scripts/screenshot.config.json
+++ b/scripts/screenshot.config.json
@@ -1,6 +1,6 @@
 {
   "uris": {
-    "footer": "http://localhost:6006/iframe.html?id=components-footer--footer&viewMode=story"
+    "footer": "http://localhost:6006/"
   },
   "viewports": {
     "mobile": { "width": 375, "height": 932 },
