--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -36,7 +36,7 @@ jobs:
       working-directory: packages/storybook-html/
     - name: Serve Storybook and run tests
       run: |
-        npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
+        npx concurrently -k -s first -n "SB,UPDATE" -c "magenta,blue" \
         "npx http-server storybook-static --port 6006 --silent" \
         "npx wait-on tcp:6006 && npm run update-screenshots"
       working-directory: packages/storybook-html/
