--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Serve Storybook and run tests
       run: |
         npx concurrently -k -s first -n "SB,UPDATE" -c "magenta,blue" \
-        "npx http-server storybook-static --port 6006 --silent" \
+        "npx http-server storybook-static --port 6006" \
         "npx wait-on tcp:6006 && npm run update-screenshots"
       working-directory: packages/storybook-html/
     - name: run visual regression
