--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,5 @@
 {
-  "version": "0.0.12-alpha.0",
+  "version": "0.0.11-alpha.0",
   "npmClient": "npm",
-  "packages": [
-    "packages/*"
-  ]
+  "packages": ["packages/*"]
 }
