--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/user-event": "^14.3.0",
     "babel-jest": "^28.1.3",
+    "cli-progress": "^3.11.2",
     "core-js": "^3.24.0",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
@@ -32,6 +33,11 @@
     "lerna": "^5.5.0",
     "msw": "^0.44.2",
     "prettier": "2.7.1",
+    "puppeteer": "^17.1.3",
+    "reg-keygen-git-hash-plugin": "^0.12.1",
+    "reg-notify-github-with-api-plugin": "^0.12.1",
+    "reg-publish-s3-plugin": "^0.12.1",
+    "reg-suit": "^0.12.1",
     "rollup": "^2.70.2",
     "stylelint": "^14.9.1",
     "stylelint-config-prettier": "^9.0.3",
@@ -49,7 +55,10 @@
     "lint-js": "eslint --ext .js,.jsx .",
     "lint-css": "stylelint \"**/*.{css,scss}\"",
     "lint-fix": "npm run format && npm run lint-js -- --fix && npm run lint-css -- --fix",
-    "test": "jest"
+    "test": "jest",
+    "update-screenshots": "node scripts/screenshot.js",
+    "reg-suit": "reg-suit run",
+    "serve-screenshots": "http-server dist -i -p 6006"
   },
   "browserslist": [
     "last 4 chrome versions",
