--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -13,7 +13,8 @@
 	"license": "ISC",
 	"scripts": {
 		"storybook": "start-storybook -p 6006",
-		"build-storybook": "build-storybook -o .out"
+		"build-storybook": "build-storybook -o .out",
+		"update-screenshots": "node ../../scripts/screenshot.js"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.17.0",
