--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -13,8 +13,7 @@
 	"license": "ISC",
 	"scripts": {
 		"storybook": "start-storybook -p 6006",
-		"build-storybook": "build-storybook",
-		"test-storybook": "test-storybook"
+		"build-storybook": "build-storybook"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.17.0",
