--- a/scripts/screenshot.config.json
+++ b/scripts/screenshot.config.json
@@ -1,8 +1,6 @@
 {
   "uris": {
-    "home": "http://localhost:6006/",
-    "footer": "http://localhost:6006/?path=/docs/components-footer--footer",
-    "footer2": "http://localhost:6006/iframe.html?id=components-footer--footer&viewMode=story"
+    "footer": "http://localhost:6006/iframe.html?id=components-footer--footer&viewMode=story"
   },
   "viewports": {
     "mobile": { "width": 375, "height": 932 },
