--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -26,6 +26,7 @@ jobs:
       env:
         CI: true
     - name: workaround for detached HEAD
+      # Workaround for Detached HEAD https://github.com/reg-viz/reg-suit#workaround-for-detached-head
       run: |
         git checkout ${GITHUB_REF#refs/heads/} || git checkout -b ${GITHUB_REF#refs/heads/} && git pull
     - name: Install Playwright
