--- a/packages/breadcrumb/package.json
+++ b/packages/breadcrumb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/breadcrumb",
-  "version": "0.0.12-alpha.0",
+  "version": "0.0.13-alpha.0",
   "description": "Breadcrumb component",
   "keywords": [
     "uqds",
@@ -40,7 +40,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^0.0.12-alpha.0",
-    "@uqds/icon": "^0.0.12-alpha.0"
+    "@uqds/core": "^1.0.0",
+    "@uqds/icon": "^0.0.13-alpha.0"
   }
 }
