--- a/packages/progression/package.json
+++ b/packages/progression/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/progression",
-  "version": "0.0.12-alpha.0",
+  "version": "0.0.13-alpha.0",
   "description": "Progression component",
   "keywords": [
     "uqds",
@@ -41,6 +41,6 @@
     "url": "https://github.com/uqds/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^0.0.12-alpha.0"
+    "@uqds/core": "^1.0.0"
   }
 }
