--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -63,6 +63,8 @@
     "sass-loader": "^8.0.2",
     "tocbot": "^4.18.0",
     "ts-loader": "^6.2.2",
+    "twig": "^1.16.0",
+    "twig-loader": "^0.5.5",
     "typescript": "^3.8.2",
     "underscore": "^1.13.2",
     "zxcvbn": "^4.4.2"
