--- a/packages/accordion/package.json
+++ b/packages/accordion/package.json
@@ -46,6 +46,7 @@
     "@uqds/icon": "^0.0.14-alpha.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^9.3.3",
     "gulp": "^4.0.2"
   }
 }
