--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -12,21 +12,25 @@
   },
   "license": "ISC",
   "scripts": {
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
     "@babel/core": "^7.17.0",
+    "@babel/preset-env": "^7.23.5",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@material/circular-progress": "^8.0.0",
-    "@storybook/addon-a11y": "^6.5.15",
-    "@storybook/addon-essentials": "^6.5.15",
-    "@storybook/addons": "^6.5.15",
-    "@storybook/html": "^6.5.15",
-    "@storybook/test-runner": "^0.9.2",
-    "@storybook/theming": "^6.5.15",
+    "@storybook/addon-a11y": "^7.6.3",
+    "@storybook/addon-essentials": "^7.6.3",
+    "@storybook/addon-mdx-gfm": "^7.6.3",
+    "@storybook/addons": "^7.6.3",
+    "@storybook/html": "^7.6.3",
+    "@storybook/html-webpack5": "^7.6.3",
+    "@storybook/test-runner": "^0.16.0",
+    "@storybook/theming": "^7.6.3",
     "@uqds/accordion": "^0.0.14-alpha.0",
     "@uqds/alert": "^1.1.0",
-    "@uqds/app-maps": "^0.0.14-alpha.0",
     "@uqds/blockquote": "^0.0.14-alpha.0",
     "@uqds/body": "^0.0.14-alpha.0",
     "@uqds/breadcrumb": "^1.0.0-alpha.0",
@@ -34,17 +38,14 @@
     "@uqds/card": "^0.0.14-alpha.0",
     "@uqds/core": "^1.1.0",
     "@uqds/footer": "^1.1.0",
-    "@uqds/footer-legacy": "^0.0.14-alpha.0",
     "@uqds/form": "^0.0.14-alpha.0",
     "@uqds/grid": "^0.0.14-alpha.0",
     "@uqds/grid-menu": "^0.0.14-alpha.0",
     "@uqds/header": "^1.1.0",
-    "@uqds/header-legacy": "^0.0.14-alpha.0",
     "@uqds/hero": "^0.0.14-alpha.0",
     "@uqds/icon": "^0.0.14-alpha.0",
     "@uqds/lists": "^0.0.14-alpha.0",
     "@uqds/loading-spinner": "^0.0.14-alpha.0",
-    "@uqds/page-header": "^0.0.14-alpha.0",
     "@uqds/pagination": "^0.0.14-alpha.0",
     "@uqds/pane": "^0.0.14-alpha.0",
     "@uqds/previous-next": "^0.0.14-alpha.0",
@@ -59,8 +60,11 @@
     "font-awesome": "^4.7.0",
     "joi-browser": "^13.4.0",
     "mermaid": "^8.13.10",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sass": "^1.49.7",
     "sass-loader": "^8.0.2",
+    "storybook": "^7.6.3",
     "tocbot": "^4.18.0",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.2",
