--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -31,6 +31,7 @@
     "@storybook/theming": "^7.6.3",
     "@uqds/accordion": "^0.0.14-alpha.0",
     "@uqds/alert": "^1.1.0",
+    "@uqds/app-maps": "^0.0.14-alpha.0",
     "@uqds/blockquote": "^0.0.14-alpha.0",
     "@uqds/body": "^0.0.14-alpha.0",
     "@uqds/breadcrumb": "^1.0.0-alpha.0",
@@ -38,14 +39,17 @@
     "@uqds/card": "^0.0.14-alpha.0",
     "@uqds/core": "^1.1.0",
     "@uqds/footer": "^1.1.0",
+    "@uqds/footer-legacy": "^0.0.14-alpha.0",
     "@uqds/form": "^0.0.14-alpha.0",
     "@uqds/grid": "^0.0.14-alpha.0",
     "@uqds/grid-menu": "^0.0.14-alpha.0",
     "@uqds/header": "^1.1.0",
+    "@uqds/header-legacy": "^0.0.14-alpha.0",
     "@uqds/hero": "^0.0.14-alpha.0",
     "@uqds/icon": "^0.0.14-alpha.0",
     "@uqds/lists": "^0.0.14-alpha.0",
     "@uqds/loading-spinner": "^0.0.14-alpha.0",
+    "@uqds/page-header": "^0.0.14-alpha.0",
     "@uqds/pagination": "^0.0.14-alpha.0",
     "@uqds/pane": "^0.0.14-alpha.0",
     "@uqds/previous-next": "^0.0.14-alpha.0",
