--- a/package.json
+++ b/package.json
@@ -27,5 +27,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "lerna": "^6.5.1"
+  }
 }
