--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -17,12 +17,15 @@
         "@storybook/addon-essentials": "^7.6.4",
         "@storybook/addon-interactions": "^7.6.4",
         "@storybook/addon-links": "^7.6.4",
+        "@storybook/addon-styling-webpack": "^0.0.5",
         "@storybook/blocks": "^7.6.4",
         "@storybook/html": "^7.6.4",
         "@storybook/html-webpack5": "^7.6.4",
         "@storybook/test": "^7.6.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "sass": "^1.69.5",
+        "sass-loader": "^13.3.2",
         "storybook": "^7.6.4"
     }
 }
