--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
   ],
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "format": "npx prettier . --write",
+    "lint": "npx prettier . --check",
+    "lint-fix": "npm run format"
   },
   "devDependencies": {
-    "lerna": "^6.5.1"
+    "lerna": "^6.5.1",
+    "prettier": "^3.1.1"
   }
 }
