--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
   "devDependencies": {
     "lerna": "^6.5.1",
     "prettier": "^3.1.1"
+  },
+  "engines" : { 
+    "node" : ">=20.10.0",
+    "npm" : ">=10.2.5"
   }
 }
