Create Vite base setup

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # Design system
 node_modules/
-*.log
 dist
+dist-ssr
+*.local
 
 # Packages
 packages/*/package-lock.json
@@ -11,6 +12,25 @@ screenshots/*.png
 
 # IDE Specific
 .vscode
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
 # OS Specific
 .DS_Store
