--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "author": "",
   "license": "ISC",
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "storybook-html/*"
   ],
   "main": "index.html",
   "scripts": {
