--- a/package.json
+++ b/package.json
@@ -28,10 +28,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "npx prettier . --write",
+    "lint": "npx prettier . --check",
+    "lint-fix": "npm run format"
   },
   "devDependencies": {
     "lerna": "^6.5.1",
+    "prettier": "^3.1.1",
     "vite": "^5.0.8"
   },
   "engines": {
