--- a/package.json
+++ b/package.json
@@ -30,10 +30,18 @@
     "build": "vite build",
     "preview": "vite preview",
     "format": "npx prettier . --write",
-    "lint": "npx prettier . --check",
-    "lint-fix": "npm run format"
+    "lint": "npx prettier . --check && npm run lint-js", 
+    "lint-js": "npx eslint --ext .js,.jsx .",
+    "lint-fix": "npx run format && npx run lint-js -- --fix "
   },
   "devDependencies": {
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "lerna": "^6.5.1",
     "prettier": "^3.1.1",
     "vite": "^5.0.8"
