--- a/packages/accordion/package.json
+++ b/packages/accordion/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/accordion",
-  "version": "0.0.14-alpha.0",
+  "version": "1.0.0",
   "description": "Accordion component",
   "keywords": [
     "uqds",
@@ -42,8 +42,8 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.1.0",
-    "@uqds/icon": "^0.0.14-alpha.0"
+    "@uqds/core": "^1.1.1",
+    "@uqds/icon": "^0.0.15-alpha.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^9.3.3",
