--- a/packages/footer/package.json
+++ b/packages/footer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/footer",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "The POC UQ footer component package",
   "keywords": [
     "uqds",
@@ -37,10 +37,10 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/accordion": "^0.0.14-alpha.0",
-    "@uqds/core": "^1.1.0",
-    "@uqds/grid": "^0.0.14-alpha.0",
-    "@uqds/icon": "^0.0.14-alpha.0"
+    "@uqds/accordion": "^1.0.0",
+    "@uqds/core": "^1.1.1",
+    "@uqds/grid": "^0.0.15-alpha.0",
+    "@uqds/icon": "^0.0.15-alpha.0"
   },
   "devDependencies": {
     "gulp": "^4.0.2"
