--- a/babel.config.json
+++ b/babel.config.json
@@ -1,12 +1,13 @@
-module.exports = {
-  presets: [
+{
+  "plugins": ["@babel/plugin-proposal-class-properties"],
+  "presets": [
     [
       "@babel/preset-env",
       {
-        bugfixes: true,
-        useBuiltIns: "usage",
-        corejs: "3.21",
-      },
-    ],
-  ],
-};
+        "bugfixes": true,
+        "useBuiltIns": "usage",
+        "corejs": "3.21"
+      }
+    ]
+  ]
+}
