--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -28,17 +28,16 @@ jobs:
 
       - name: Build Storybook
         run: |
-          npm run build-storybook --quiet
+          npm run build-storybook
         working-directory: packages/storybook-html/
 
       - name: Serve Storybook
         run: |
-          npx http-server storybook-static --port 6006 --silent &
+          npx http-server storybook-static --port 6006 &
         working-directory: packages/storybook-html/
 
       - name: Create screenshots
         run: |
-          npx wait-on tcp:6006
           npm run update-screenshots
 
       - name: Run visual regression
