--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -57,6 +57,7 @@
     "babel-loader": "^8.2.3",
     "core-js": "^3.21.0",
     "font-awesome": "^4.7.0",
+    "http-server": "^14.1.1",
     "joi-browser": "^13.4.0",
     "mermaid": "^8.13.10",
     "sass": "^1.49.7",
