chore: use latest versions of gulp-sass and dart-sass

--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
-    "gulp-dart-sass": "^1.0.2",
     "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.1.0",
     "gulp-uglify": "^3.0.2",
     "jest": "^29.4.1",
     "jest-axe": "^7.0.0",
@@ -39,6 +39,7 @@
     "reg-publish-s3-plugin": "^0.12.1",
     "reg-suit": "^0.12.1",
     "rollup": "^3.12.0",
+    "sass": "^1.69.7",
     "stylelint": "^14.16.1",
     "stylelint-config-prettier": "^9.0.4",
     "stylelint-config-prettier-scss": "^0.0.1",
