chore: update screenshot urls for deprecated grid

--- a/scripts/screenshot.config.json
+++ b/scripts/screenshot.config.json
@@ -1,26 +1,26 @@
 {
   "uris": {
-    "layout-grid--golden": "http://localhost:6006/iframe.html?id=layout-grid--golden",
-    "layout-grid--halves": "http://localhost:6006/iframe.html?id=layout-grid--halves",
-    "layout-grid--thirds": "http://localhost:6006/iframe.html?id=layout-grid--thirds",
-    "layout-grid--quarters": "http://localhost:6006/iframe.html?id=layout-grid--quarters",
-    "layout-grid--twelve-eight-six-example-1": "http://localhost:6006/iframe.html?id=layout-grid--twelve-eight-six-example-1",
-    "layout-grid--twelve-eight-six-example-2": "http://localhost:6006/iframe.html?id=layout-grid--twelve-eight-six-example-2",
-    "layout-grid--twelve-eight-six-mobile": "http://localhost:6006/iframe.html?id=layout-grid--twelve-eight-six-mobile",
-    "layout-grid--twelve-eight-six-tablet": "http://localhost:6006/iframe.html?id=layout-grid--twelve-eight-six-tablet",
-    "layout-grid--twelve-eight-six-desktop": "http://localhost:6006/iframe.html?id=layout-grid--twelve-eight-six-desktop",
-    "layout-grid--twelve-eight-six-nested": "http://localhost:6006/iframe.html?id=layout-grid--twelve-eight-six-nested",
-    "layout-grid--twelve-eight-six-full-width": "http://localhost:6006/iframe.html?id=layout-grid--twelve-eight-six-full-width",
-    "layout-grid--flexible-1": "http://localhost:6006/iframe.html?id=layout-grid--flexible-1",
-    "layout-grid--flexible-2": "http://localhost:6006/iframe.html?id=layout-grid--flexible-2",
-    "layout-grid--flexible-full-width": "http://localhost:6006/iframe.html?id=layout-grid--flexible-full-width",
-    "layout-grid--layout-container": "http://localhost:6006/iframe.html?id=layout-grid--layout-container",
-    "layout-sections--sections-default": "http://localhost:6006/iframe.html?id=layout-sections--sections-default",
-    "layout-sections--sections-centered": "http://localhost:6006/iframe.html?id=layout-sections--sections-centered",
-    "layout-sections--sections-narrow": "http://localhost:6006/iframe.html?id=layout-sections--sections-narrow",
-    "layout-sections--sections-shaded": "http://localhost:6006/iframe.html?id=layout-sections--sections-shaded",
-    "layout-sections--sections-no-padding": "http://localhost:6006/iframe.html?id=layout-sections--sections-no-padding",
-    "layout-sections--sections-large-padding": "http://localhost:6006/iframe.html?id=layout-sections--sections-large-padding",
+    "deprecated-grid--golden": "http://localhost:6006/iframe.html?id=deprecated-grid--golden",
+    "deprecated-grid--halves": "http://localhost:6006/iframe.html?id=deprecated-grid--halves",
+    "deprecated-grid--thirds": "http://localhost:6006/iframe.html?id=deprecated-grid--thirds",
+    "deprecated-grid--quarters": "http://localhost:6006/iframe.html?id=deprecated-grid--quarters",
+    "deprecated-grid--twelve-eight-six-example-1": "http://localhost:6006/iframe.html?id=deprecated-grid--twelve-eight-six-example-1",
+    "deprecated-grid--twelve-eight-six-example-2": "http://localhost:6006/iframe.html?id=deprecated-grid--twelve-eight-six-example-2",
+    "deprecated-grid--twelve-eight-six-mobile": "http://localhost:6006/iframe.html?id=deprecated-grid--twelve-eight-six-mobile",
+    "deprecated-grid--twelve-eight-six-tablet": "http://localhost:6006/iframe.html?id=deprecated-grid--twelve-eight-six-tablet",
+    "deprecated-grid--twelve-eight-six-desktop": "http://localhost:6006/iframe.html?id=deprecated-grid--twelve-eight-six-desktop",
+    "deprecated-grid--twelve-eight-six-nested": "http://localhost:6006/iframe.html?id=deprecated-grid--twelve-eight-six-nested",
+    "deprecated-grid--twelve-eight-six-full-width": "http://localhost:6006/iframe.html?id=deprecated-grid--twelve-eight-six-full-width",
+    "deprecated-grid--flexible-1": "http://localhost:6006/iframe.html?id=deprecated-grid--flexible-1",
+    "deprecated-grid--flexible-2": "http://localhost:6006/iframe.html?id=deprecated-grid--flexible-2",
+    "deprecated-grid--flexible-full-width": "http://localhost:6006/iframe.html?id=deprecated-grid--flexible-full-width",
+    "deprecated-grid--layout-container": "http://localhost:6006/iframe.html?id=deprecated-grid--layout-container",
+    "component-sections--sections-default": "http://localhost:6006/iframe.html?id=component-sections--sections-default",
+    "component-sections--sections-centered": "http://localhost:6006/iframe.html?id=component-sections--sections-centered",
+    "component-sections--sections-narrow": "http://localhost:6006/iframe.html?id=component-sections--sections-narrow",
+    "component-sections--sections-shaded": "http://localhost:6006/iframe.html?id=component-sections--sections-shaded",
+    "component-sections--sections-no-padding": "http://localhost:6006/iframe.html?id=component-sections--sections-no-padding",
+    "component-sections--sections-large-padding": "http://localhost:6006/iframe.html?id=component-sections--sections-large-padding",
     "components-body-elements--title": "http://localhost:6006/iframe.html?id=components-body-elements--title",
     "components-body-elements--header": "http://localhost:6006/iframe.html?id=components-body-elements--header",
     "components-body-elements--text-block": "http://localhost:6006/iframe.html?id=components-body-elements--text-block",
