--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,12 +11,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: "⬇️ Checkout"
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
       - name: "🟢 Install NodeJS"
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: '16'
 
@@ -44,7 +44,7 @@ jobs:
           git config user.email "${{ github.actor}}@users.noreply.github.com"
           
           if [ "${{ github.ref_name }}" = "releases" ]; then
-            npx lerna version --conventional-commits --conventional-graduate --yes
+            npx lerna publish --conventional-commits --conventional-graduate --yes
           else
-            npx lerna version --conventional-commits --conventional-prerelease --preid alpha --yes
+            npx lerna publish --conventional-commits --conventional-prerelease --yes
           fi
