--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,16 +35,46 @@ jobs:
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-      - name: "✨ Version and publish"
+      - name: "🧐 Version dry run"
+        if: ${{ github.ref_name == 'releases' }}
+        env:
+          GH_TOKEN: ${{ secrets.UQDS_PERSONAL_ACCESS_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: |
+          git config user.name "${{ github.actor }}"
+          git config user.email "${{ github.actor}}@users.noreply.github.com"          
+          npx lerna version --conventional-commits --conventional-graduate --yes --no-git-push --no-git-tag-version --no-push || true
+
+      - uses: trstringer/manual-approval@v1
+        name: "⌛️ Wait for approval"
+        if: ${{ github.ref_name == 'releases' }}
+        with:
+          secret: ${{ github.UQDS_PERSONAL_ACCESS_TOKEN }}
+          approvers: bcrunk,uqnm
+          minimum-approvals: 1
+          issue-title: 'Approve new release ✅'
+          issue-body: >
+            Please approve or deny the release of a new release.
+            [View the workflow output](https://github.com/uq-its-ss/design-system/actions/runs/${{ github.run_number }}) to confirm the version is as expected.
+            
+          exclude-workflow-initiator-as-approver: false
+
+      - name: "✨ Publish stable"
+        if: ${{ github.ref_name == 'releases' }}
         env:
           GH_TOKEN: ${{ secrets.UQDS_PERSONAL_ACCESS_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor}}@users.noreply.github.com"
-          
-          if [ "${{ github.ref_name }}" = "releases" ]; then
-            npx lerna publish --conventional-commits --conventional-graduate --yes
-          else
-            npx lerna publish --conventional-commits --conventional-prerelease --yes
-          fi
+          npx lerna publish --conventional-commits --conventional-graduate --yes
+
+      - name: "🐣 Publish alpha"
+        if: ${{ github.ref_name == 'master' }}
+        env:
+          GH_TOKEN: ${{ secrets.UQDS_PERSONAL_ACCESS_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: |
+          git config user.name "${{ github.actor }}"
+          git config user.email "${{ github.actor}}@users.noreply.github.com"
+          npx lerna publish --conventional-commits --conventional-prerelease --yes --no-git-push --no-git-tag-version --no-push
