--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -43,7 +43,7 @@ jobs:
         run: |
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor}}@users.noreply.github.com"          
-          npx lerna version --conventional-commits --conventional-graduate --yes --no-git-push --no-git-tag-version --no-push || true
+          npx lerna version --conventional-commits --conventional-graduate --yes --no-git-tag-version --no-push || true
 
       - uses: trstringer/manual-approval@v1
         name: "⌛️ Wait for approval"
@@ -77,4 +77,4 @@ jobs:
         run: |
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor}}@users.noreply.github.com"
-          npx lerna publish --conventional-commits --conventional-prerelease --yes --no-git-push --no-git-tag-version --no-push
+          npx lerna publish --conventional-commits --conventional-prerelease --yes
