chore(release): publish [skip ci]
 - @uqds/accordion@1.0.1-alpha.0
 - @uqds/footer@1.1.2-alpha.0
 - private-design-output@0.0.15-alpha.1
 - storybook-html@0.0.15-alpha.1

--- a/packages/accordion/package.json
+++ b/packages/accordion/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/accordion",
-  "version": "1.0.0",
+  "version": "1.0.1-alpha.0",
   "description": "Accordion component",
   "keywords": [
     "uqds",
