--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -24,6 +24,7 @@
     "@storybook/addon-a11y": "^7.6.3",
     "@storybook/addon-essentials": "^7.6.3",
     "@storybook/addon-mdx-gfm": "^7.6.3",
+    "@storybook/addon-styling-webpack": "^0.0.5",
     "@storybook/addons": "^7.6.3",
     "@storybook/html": "^7.6.3",
     "@storybook/html-webpack5": "^7.6.3",
@@ -66,8 +67,8 @@
     "mermaid": "^8.13.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.49.7",
-    "sass-loader": "^8.0.2",
+    "sass": "^1.70.0",
+    "sass-loader": "^14.0.0",
     "storybook": "^7.6.3",
     "tocbot": "^4.18.0",
     "ts-loader": "^6.2.2",
