chore(release): publish [skip ci]
 - @uqds/accordion@1.0.1-alpha.2
 - @uqds/alert@1.1.2-alpha.0
 - @uqds/app-maps@0.0.15-alpha.1
 - @uqds/blockquote@0.0.15-alpha.1
 - @uqds/body@0.0.15-alpha.1
 - @uqds/breadcrumb@1.0.1-alpha.0
 - @uqds/button@0.0.15-alpha.1
 - @uqds/card@0.0.15-alpha.1
 - @uqds/core@1.1.2-alpha.0
 - @uqds/footer-legacy@0.0.15-alpha.1
 - @uqds/footer@1.1.2-alpha.2
 - @uqds/form@0.0.15-alpha.1
 - @uqds/grid-menu@0.0.15-alpha.1
 - @uqds/grid@0.0.15-alpha.1
 - @uqds/header-legacy@0.0.15-alpha.1
 - @uqds/header@1.1.2-alpha.0
 - @uqds/hero@0.0.15-alpha.1
 - @uqds/icon@0.0.15-alpha.1
 - @uqds/lists@0.0.15-alpha.1
 - @uqds/loading-spinner@0.0.15-alpha.1
 - @uqds/page-header@0.0.15-alpha.1
 - @uqds/pagination@0.0.15-alpha.1
 - @uqds/pane@0.0.15-alpha.1
 - @uqds/previous-next@0.0.15-alpha.1
 - private-design-output@0.0.15-alpha.3
 - @uqds/progression@0.0.15-alpha.1
 - @uqds/sections@0.0.15-alpha.1
 - @uqds/side-nav@0.0.15-alpha.1
 - @uqds/site-header@1.1.2-alpha.0
 - storybook-html@0.0.15-alpha.4
 - @uqds/table@0.0.15-alpha.1
 - @uqds/tabs@0.0.15-alpha.1

--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/button",
-  "version": "0.0.15-alpha.0",
+  "version": "0.0.15-alpha.1",
   "description": "The button component package",
   "keywords": [
     "uqds",
@@ -40,6 +40,6 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.1.1"
+    "@uqds/core": "^1.1.2-alpha.0"
   }
 }
