--- a/packages/header/package.json
+++ b/packages/header/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/header",
-  "version": "1.1.1",
+  "version": "1.1.2-alpha.0",
   "description": "The POC UQ Header component package",
   "keywords": [
     "uqds",
@@ -37,10 +37,10 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.1.1",
-    "@uqds/form": "^0.0.15-alpha.0",
-    "@uqds/grid": "^0.0.15-alpha.0",
-    "@uqds/icon": "^0.0.15-alpha.0"
+    "@uqds/core": "^1.1.2-alpha.0",
+    "@uqds/form": "^0.0.15-alpha.1",
+    "@uqds/grid": "^0.0.15-alpha.1",
+    "@uqds/icon": "^0.0.15-alpha.1"
   },
   "devDependencies": {
     "gulp": "^4.0.2"
