--- a/packages/private-design-output/package.json
+++ b/packages/private-design-output/package.json
@@ -1,6 +1,6 @@
 {
   "name": "private-design-output",
-  "version": "0.0.15-alpha.2",
+  "version": "0.0.15-alpha.3",
   "description": "Render style kits for UQ clients",
   "private": true,
   "author": {
@@ -44,33 +44,33 @@
     "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
-    "@uqds/accordion": "^1.0.1-alpha.1",
-    "@uqds/alert": "^1.1.1",
-    "@uqds/blockquote": "^0.0.15-alpha.0",
-    "@uqds/body": "^0.0.15-alpha.0",
-    "@uqds/breadcrumb": "^1.0.0",
-    "@uqds/button": "^0.0.15-alpha.0",
-    "@uqds/card": "^0.0.15-alpha.0",
-    "@uqds/core": "^1.1.1",
-    "@uqds/footer": "^1.1.2-alpha.1",
-    "@uqds/footer-legacy": "^0.0.15-alpha.0",
-    "@uqds/form": "^0.0.15-alpha.0",
-    "@uqds/grid": "^0.0.15-alpha.0",
-    "@uqds/grid-menu": "^0.0.15-alpha.0",
-    "@uqds/header": "^1.1.1",
-    "@uqds/header-legacy": "^0.0.15-alpha.0",
-    "@uqds/hero": "^0.0.15-alpha.0",
-    "@uqds/icon": "^0.0.15-alpha.0",
-    "@uqds/lists": "^0.0.15-alpha.0",
-    "@uqds/loading-spinner": "^0.0.15-alpha.0",
-    "@uqds/pagination": "^0.0.15-alpha.0",
-    "@uqds/pane": "^0.0.15-alpha.0",
-    "@uqds/previous-next": "^0.0.15-alpha.0",
-    "@uqds/progression": "^0.0.15-alpha.0",
-    "@uqds/sections": "^0.0.15-alpha.0",
-    "@uqds/side-nav": "^0.0.15-alpha.0",
-    "@uqds/site-header": "^1.1.1",
-    "@uqds/table": "^0.0.15-alpha.0",
-    "@uqds/tabs": "^0.0.15-alpha.0"
+    "@uqds/accordion": "^1.0.1-alpha.2",
+    "@uqds/alert": "^1.1.2-alpha.0",
+    "@uqds/blockquote": "^0.0.15-alpha.1",
+    "@uqds/body": "^0.0.15-alpha.1",
+    "@uqds/breadcrumb": "^1.0.1-alpha.0",
+    "@uqds/button": "^0.0.15-alpha.1",
+    "@uqds/card": "^0.0.15-alpha.1",
+    "@uqds/core": "^1.1.2-alpha.0",
+    "@uqds/footer": "^1.1.2-alpha.2",
+    "@uqds/footer-legacy": "^0.0.15-alpha.1",
+    "@uqds/form": "^0.0.15-alpha.1",
+    "@uqds/grid": "^0.0.15-alpha.1",
+    "@uqds/grid-menu": "^0.0.15-alpha.1",
+    "@uqds/header": "^1.1.2-alpha.0",
+    "@uqds/header-legacy": "^0.0.15-alpha.1",
+    "@uqds/hero": "^0.0.15-alpha.1",
+    "@uqds/icon": "^0.0.15-alpha.1",
+    "@uqds/lists": "^0.0.15-alpha.1",
+    "@uqds/loading-spinner": "^0.0.15-alpha.1",
+    "@uqds/pagination": "^0.0.15-alpha.1",
+    "@uqds/pane": "^0.0.15-alpha.1",
+    "@uqds/previous-next": "^0.0.15-alpha.1",
+    "@uqds/progression": "^0.0.15-alpha.1",
+    "@uqds/sections": "^0.0.15-alpha.1",
+    "@uqds/side-nav": "^0.0.15-alpha.1",
+    "@uqds/site-header": "^1.1.2-alpha.0",
+    "@uqds/table": "^0.0.15-alpha.1",
+    "@uqds/tabs": "^0.0.15-alpha.1"
   }
 }
