--- a/packages/side-nav/package.json
+++ b/packages/side-nav/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/side-nav",
-  "version": "0.0.15-alpha.0",
+  "version": "0.0.15-alpha.1",
   "description": "Side nav (title, side navigation)",
   "keywords": [
     "uqds",
@@ -40,7 +40,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.1.1",
-    "@uqds/icon": "^0.0.15-alpha.0"
+    "@uqds/core": "^1.1.2-alpha.0",
+    "@uqds/icon": "^0.0.15-alpha.1"
   }
 }
