--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -18,10 +18,12 @@
   "devDependencies": {
     "@babel/core": "^7.17.0",
     "@material/circular-progress": "^8.0.0",
+    "@mdx-js/react": "^3.0.0",
     "@storybook/addon-a11y": "^6.5.15",
     "@storybook/addon-essentials": "^6.5.15",
     "@storybook/addons": "^6.5.15",
     "@storybook/html": "^6.5.15",
+    "@storybook/mdx2-csf": "^0.0.3",
     "@storybook/test-runner": "^0.9.2",
     "@storybook/theming": "^6.5.15",
     "@uqds/accordion": "^1.0.1-alpha.2",
@@ -60,6 +62,8 @@
     "http-server": "^14.1.1",
     "joi-browser": "^13.4.0",
     "mermaid": "^8.13.10",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sass": "^1.69.7",
     "sass-loader": "^8.0.2",
     "tocbot": "^4.18.0",
