chore(ci): Alternate CI approach (#473)
* chore(ci): Remove skip ci

* Revert "chore: Persist credentials (#470)"

This reverts commit dd419e34dd4b846df2335e39736c9fe5c24931d0.

* chore(ci): Remove space

* chore(ci): GH doesn't like :

* chore(ci): Escape expression

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,11 +9,11 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    if: ${{ ! startsWith(github.event.head_commit.message, 'chore(release):Publish') }}
     steps:
       - name: "⬇️ Checkout"
         uses: actions/checkout@v3
         with:
-          persist-credentials: false
           fetch-depth: 0
           token: ${{ secrets.UQDS_PERSONAL_ACCESS_TOKEN }}
 
