chore(ci): Additional debug

--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -21,6 +21,7 @@ jobs:
         run: |
           git branch
           git status
+          echo "event info branch ${{ github.event.pull_request.branch}}"
 
       - name: Use Node 18
         uses: actions/setup-node@v3
